fix spacing for `dir=rtl` trees
also simplify some story code

--- a/src/components/Tree/Tree_shim.css
+++ b/src/components/Tree/Tree_shim.css
@@ -4,10 +4,16 @@
 .neo-treeview__sub-tree-item {
   cursor: default;
 }
-.neo-treeview__sub-tree-item > ul {
+
+li[dir="ltr"].neo-treeview__sub-tree-item > ul {
   display: block;
   margin-left: 1rem;
 }
+li[dir="rtl"].neo-treeview__sub-tree-item > ul {
+  display: block;
+  margin-right: 1rem;
+}
+
 .neo-treeview__sub-tree-item div[role="button"] {
   cursor: pointer;
   display: flex;
